fixed spacing on index page and added shadow to logo

--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,12 @@
 	text-shadow: #AAAAAA 0 0 5px;
 	font-size: 30pt;
 	text-align: center;
-	padding: 25px;
-	font-weight:500;
+	padding: 0;
+	font-weight: 500;
+	margin-top: -10px;
 }
 
 #logo {
-
-  width: 25%;
+	filter: drop-shadow(0px 0px 3px #999999);
+	width: 25%;
 }
